# cyberai

./: .env.example  .gitignore  Dockerfile  Dockerfile.scanner  docker-compose.yml  pyproject.toml
.github/workflows/: notify_slack.yml  pipeline_a.yml  pipeline_b.yml  verify_chain.yml
deploy/: setup_ecs.sh
deploy/systemd/: README.md  cyberai-daily-scan.service  cyberai-daily-scan.timer
docs/: architecture.html  index.html
research/: blog_phase2_postmortem.md  checkpoint_2026-04-24.md  scan_plan_phase2.md  technical_report_v1.md  triage_report_2026-04-18.md  triage_report_phase2.md
research/cloud_backup_2026-04-24/: ecs_console_output.txt  ecs_metadata.json  terraform_outputs.json
research/cloud_backup_2026-05-03/: ecs_metadata.json
research/curl/: manual_analysis.md  t1_glm5_results.json  vulnerability_report.md
scripts/: challenge_test.py  deep_verify_chain.py  e2e_test.py  make_extracts.py  make_extracts_phase2.py  pipeline_b_chain.py  pipeline_b_detect.py  pipeline_b_plan.py  process_scan_results.py  research_scan.py  run_daily_scans.sh  run_mosquitto_scan_scheduled.sh  scan_curl_t1.py  scan_curl_t1_retry.py  scan_expat_t1.py  scan_freetype_t1.py  scan_imagemagick_t2.py  scan_libpng_t1.py  scan_libpng_v2.py  scan_libpng_v3.py  scan_libssh2_t1.py  scan_libtiff_t2.py  scan_libxml2_t1.py  scan_list.json  scan_nginx_t1.py  scan_openssl_t1.py  scan_phase2.py  scan_sqlite_t1.py  scan_zlib_t1.py  verify_candidates.py  verify_findings.py
targets/: poppler-26.04.0.tar.xz
terraform/: README.md  bootstrap.sh  main.tf  outputs.tf  variables.tf
(+1815 files in other folders)
